--- a/devtools/docker-build/Dockerfile.e2e-env
+++ b/devtools/docker-build/Dockerfile.e2e-env
@@ -4,7 +4,9 @@ LABEL maintainer="yejiayu.fe@gmail.com"
 
 RUN set -eux; \
     apt-get update; \
-    apt-get install -y --no-install-recommends \
-        yarn \
-        nodejs; \
+    apt-get install -y curl; \
+    curl -sL https://deb.nodesource.com/setup_12.x | bash -; \
+    apt-get install -y nodejs; \
     rm -rf /var/lib/apt/lists/*
+
+RUN npm i yarn -g;
