--- a/jenkins-x-ci.yml
+++ b/jenkins-x-ci.yml
@@ -11,12 +11,12 @@ pipelineConfig:
               containerOptions:
                 resources:
                   limits:
+                    cpu: 8
+                    memory: 8Gi
+                  requests:
                     cpu: 4
                     memory: 4Gi
-                  requests:
-                    cpu: 2
-                    memory: 2Gi
             steps:
-              - name: make-release
+              - name: make-ci
                 command: make
-                args: ['prod']
+                args: ['ci']
