--- a/jenkins-x-ci.yml
+++ b/jenkins-x-ci.yml
@@ -1,7 +1,7 @@
 buildPack: none
 pipelineConfig:
   pipelines:
-    release:
+    pullRequest:
       pipeline:
         agent:
           image: mutadev/muta:build-env
@@ -11,12 +11,12 @@ pipelineConfig:
               containerOptions:
                 resources:
                   limits:
+                    cpu: 8
+                    memory: 8Gi
+                  requests:
                     cpu: 4
                     memory: 4Gi
-                  requests:
-                    cpu: 2
-                    memory: 2Gi
             steps:
-              - name: make-release
+              - name: make-ci
                 command: make
-                args: ['prod']
+                args: ['ci']
