chore: Update CI pipeline

--- a/jenkins-x.yml
+++ b/jenkins-x.yml
@@ -6,7 +6,7 @@ pipelineConfig:
         agent:
           image: mutadev/muta:build-env
         stages:
-          - name: ci
+          - name: release
             options:
               containerOptions:
                 resources:
