--- a/jenkins-x-e2e.yml
+++ b/jenkins-x-e2e.yml
@@ -3,6 +3,8 @@ pipelineConfig:
   pipelines:
     pullRequest:
       pipeline:
+        agent:
+          image: mutadev/muta:build-env
         stages:
           - name: e2e
             options:
