--- a/core/network/Cargo.toml
+++ b/core/network/Cargo.toml
@@ -25,10 +25,10 @@ rand = "0.7"
 serde = "1.0"
 serde_derive = "1.0"
 snap = "0.2"
-tentacle = { git = "https://github.com/zeroqn/p2p", rev = "31db6ad", features = [ "flatc" ]}
-tentacle-ping = { git = "https://github.com/zeroqn/p2p", rev = "31db6ad", features = [ "flatc" ]}
-tentacle-discovery = { git = "https://github.com/zeroqn/p2p", rev = "31db6ad", features = [ "flatc" ]}
-tentacle-identify = { git = "https://github.com/zeroqn/p2p", rev = "31db6ad", features = [ "flatc" ]}
+tentacle = { git = "https://github.com/zeroqn/p2p", branch = "v0.3.0.alpha5-muta", features = [ "molc" ]}
+tentacle-ping = { git = "https://github.com/zeroqn/p2p", branch = "v0.3.0.alpha5-muta", features = [ "molc" ]}
+tentacle-discovery = { git = "https://github.com/zeroqn/p2p", branch = "v0.3.0.alpha5-muta", features = [ "molc" ]}
+tentacle-identify = { git = "https://github.com/zeroqn/p2p", branch = "v0.3.0.alpha5-muta", features = [ "molc" ]}
 tokio = { version = "0.2", features = ["macros", "rt-core"]}
 hostname = "0.3"
 lazy_static = "1.4"
