--- a/jenkins-x.yml
+++ b/jenkins-x.yml
@@ -1,36 +1,3 @@
-# buildPack: none
-# pipelineConfig:
-#   pipelines:
-#     pullRequest:
-#       pipeline:
-#         agent:
-#           image: mutadev/muta:build-env
-#         parallel:
-#         - name: test
-#           options:
-#             containerOptions:
-#               name: ""
-#               resources:
-#                 limits:
-#                   cpu: "8"
-#                   memory: 8Gi
-#                 requests:
-#                   cpu: "4"
-#                   memory: 4Gi
-#           steps:
-#           - args:
-#             - fmt
-#             command: make
-#             name: make-fmt
-#           - args:
-#             - clippy
-#             command: make
-#             name: make-clippy
-#           - args:
-#             - test
-#             command: make
-#             name: make-unit-test
-
 buildPack: none
 pipelineConfig:
   pipelines:
@@ -56,3 +23,8 @@ pipelineConfig:
                   - command: make
                     args:
                       - "test"
+              - name: "e2e test"
+                steps:
+                  - command: make
+                    args:
+                      - "e2e-test"
