change(trust_metric_test): use barrier instead of sleep
This should speed up test setup

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -46,6 +46,7 @@ util = { path = "built-in-services/util"}
 rand = "0.7"
 cita_trie = "2.0"
 core-network = { path = "./core/network", features = ["diagnostic"] }
+tokio = { version = "0.2", features = ["full"] }
 
 [workspace]
 members = [
