--- a/jenkins-x-clippy.yml
+++ b/jenkins-x-clippy.yml
@@ -4,7 +4,7 @@ pipelineConfig:
     pullRequest:
       pipeline:
         agent:
-          image: mutadev/muta:build-env
+          image: mutadev/muta-build-env:v0.1.0
         stages:
           - name: "clippy"
             parallel:
