--- a/jenkins-x-e2e.yml
+++ b/jenkins-x-e2e.yml
@@ -4,7 +4,7 @@ pipelineConfig:
     pullRequest:
       pipeline:
         agent:
-          image: mutadev/muta:e2e-env
+          image: mutadev/muta-e2e-env:v0.1.0
         stages:
           - name: e2e
             parallel:
