--- a/jenkins-x-fmt.yml
+++ b/jenkins-x-fmt.yml
@@ -7,9 +7,15 @@ pipelineConfig:
           image: mutadev/muta-build-env:v0.1.0
         stages:
           - name: fmt
-            parallel:
-              - name: "cargo fmt"
-                steps:
-                  - command: make
-                    args:
-                      - fmt
+            options:
+              containerOptions:
+                resources:
+                  limits:
+                    cpu: 2
+                    memory: 2Gi
+                  requests:
+                    cpu: 2
+                    memory: 2Gi
+            steps:
+              - name: fmt
+                command: 'make fmt'
