--- a/built-in-services/authorization/Cargo.toml
+++ b/built-in-services/authorization/Cargo.toml
@@ -13,6 +13,7 @@ protocol = { path = "../../protocol", package = "muta-protocol" }
 
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
+lazy_static = "1.4"
 rlp = "0.4"
 bytes = "0.5"
 derive_more = "0.99"
