chore: Fix ci (#336)
* fix ci test

* parallel

* update

* update

* update

* update

* e2e test

* update

* update

* fix ci

* update

--- a/devtools/docker-build/Dockerfile.e2e-env
+++ b/devtools/docker-build/Dockerfile.e2e-env
@@ -1,10 +1,11 @@
-FROM mutadev/muta:build-env
+FROM mutadev/muta-build-env:v0.1.0
 
 LABEL maintainer="yejiayu.fe@gmail.com"
 
 RUN set -eux; \
     apt-get update; \
-    apt-get install -y curl; \
+    apt-get install -y --no-install-recommends \
+        curl \
     curl -sL https://deb.nodesource.com/setup_12.x | bash -; \
     apt-get install -y nodejs; \
     rm -rf /var/lib/apt/lists/*
