--- a/jenkins-x-e2e.yml
+++ b/jenkins-x-e2e.yml
@@ -33,8 +33,8 @@ pipelineConfig:
             steps:
               - name: build-and-push
                 image: cnych/kaniko-executor:v0.22.0
-                command:
-                  - /kaniko/executor
+                command: /kaniko/executor
+                args:
                   - --dockerfile=/workspace/repo/devtools/docker-build/Dockerfile
                   - --destination=mutadev/muta:${inputs.params.version}
                   - --context=/workspace/repo
