--- a/jenkins-x-fmt.yml
+++ b/jenkins-x-fmt.yml
@@ -16,6 +16,9 @@ pipelineConfig:
                   requests:
                     cpu: 2
                     memory: 2Gi
+            timeout:
+              time: 30
+              unit: minutes
             steps:
               - name: fmt
                 command: 'make fmt'
