--- a/jenkins-x-unit.yml
+++ b/jenkins-x-unit.yml
@@ -16,6 +16,9 @@ pipelineConfig:
                   requests:
                     cpu: 3
                     memory: 6Gi
+            timeout:
+              time: 30
+              unit: minutes
             steps:
               - name: unit
                 command: 'make test'
