--- a/jenkins-x-e2e.yml
+++ b/jenkins-x-e2e.yml
@@ -5,6 +5,10 @@ pipelineConfig:
       pipeline:
         agent:
           image: mutadev/muta-e2e-env:v0.1.0
+        options:
+          timeout:
+            time: 30
+            unit: minutes
         stages:
           - name: e2e
             options:
@@ -26,9 +30,6 @@ pipelineConfig:
                     items:
                       - key: config.json
                         path: config.json
-              timeout:
-                time: 30
-                unit: minutes
 
             steps:
               - name: build-and-push
