--- a/jenkins-x-fmt.yml
+++ b/jenkins-x-fmt.yml
@@ -5,6 +5,10 @@ pipelineConfig:
       pipeline:
         agent:
           image: mutadev/muta-build-env:v0.1.0
+        options:
+          timeout:
+            time: 30
+            unit: minutes
         stages:
           - name: fmt
             options:
@@ -16,9 +20,7 @@ pipelineConfig:
                   requests:
                     cpu: 2
                     memory: 2Gi
-              timeout:
-                time: 30
-                unit: minutes
+
             steps:
               - name: fmt
                 command: 'make fmt'
