--- a/jenkins-x-e2e.yml
+++ b/jenkins-x-e2e.yml
@@ -32,14 +32,14 @@ pipelineConfig:
                         path: config.json
 
             steps:
-              - name: build-and-push
-                image: gcr.io/kaniko-project/executor:9912ccbf8d22bbafbf971124600fbb0b13b9cbd6
-                command: /kaniko/executor
-                args:
-                  - --dockerfile=/workspace/source/devtools/docker-build/Dockerfile
-                  - --destination=mutadev/muta:${inputs.params.version}
-                  - --context=/workspace/source
-                  - --cache-dir=/workspace
+              # - name: build-and-push
+              #   image: gcr.io/kaniko-project/executor:9912ccbf8d22bbafbf971124600fbb0b13b9cbd6
+              #   command: /kaniko/executor
+              #   args:
+              #     - --dockerfile=/workspace/source/devtools/docker-build/Dockerfile
+              #     - --destination=mutadev/muta:${inputs.params.version}
+              #     - --context=/workspace/source
+              #     - --cache-dir=/workspace
               - name: e2e
                 command: make
                 args:
