--- a/jenkins-x-unit.yml
+++ b/jenkins-x-unit.yml
@@ -23,6 +23,7 @@ pipelineConfig:
 
             steps:
               - name: unit
-                command: make
+                command: cargo
                 args:
                   - test
+                  - --all
