--- a/core/consensus/Cargo.toml
+++ b/core/consensus/Cargo.toml
@@ -36,9 +36,11 @@ core-network = { path = "../../core/network" }
 protocol = { path = "../../protocol", package = "muta-protocol" }
 
 [dev-dependencies]
+bit-vec = "0.6"
+lazy_static = "1.4"
 num-traits = "0.2"
 rand = "0.7"
-bit-vec = "0.6"
+
 
 [features]
 default = []
