--- a/jenkins-x-lint.yml
+++ b/jenkins-x-lint.yml
@@ -10,19 +10,23 @@ pipelineConfig:
             time: 30
             unit: minutes
         stages:
-          - name: fmt
+          - name: lint
             options:
               containerOptions:
                 resources:
                   limits:
-                    cpu: 2
-                    memory: 2Gi
+                    cpu: 4
+                    memory: 8Gi
                   requests:
                     cpu: 2
-                    memory: 2Gi
+                    memory: 8Gi
 
             steps:
               - name: fmt
                 command: make
                 args:
                   - fmt
+              - name: clippy
+                command: make
+                args:
+                  - clippy
