chore: fix pipeline of build image
fix push image

fix path

fix path

fix env

fix path

fix path

fix path

fix

fix

fix

fix

fix

fix

fix

fix

fix

fix

fix

fix

fix

fix

fix

fix

fix

fix

update

update

chaos benchmark

fix

fix

--- a/devtools/docker-build/Dockerfile
+++ b/devtools/docker-build/Dockerfile
@@ -1,11 +1,7 @@
-FROM mutadev/muta:build-env
-
+FROM ubuntu:18.04
 LABEL maintainer="yejiayu.fe@gmail.com"
 
-WORKDIR /app
-
-COPY . .
-RUN make prod
+COPY target/release/examples/muta-chain .
 
 EXPOSE 1337 8000
-CMD ["/app/target/release/examples/muta-chain"]
+CMD ["./muta-chain"]
