--- a/devtools/docker-build/Dockerfile
+++ b/devtools/docker-build/Dockerfile
@@ -1,11 +1,9 @@
-FROM mutadev/muta:build-env
-
+FROM ubuntu:18.04
 LABEL maintainer="yejiayu.fe@gmail.com"
 
-WORKDIR /app
-
-COPY . .
-RUN make prod
+COPY target/release/examples/muta-chain .
+COPY devtools/chain/config.toml devtools/chain/config.toml
+COPY devtools/chain/genesis.toml devtools/chain/genesis.toml
 
 EXPOSE 1337 8000
-CMD ["/app/target/release/examples/muta-chain"]
+CMD ["./muta-chain"]
