--- a/built-in-services/metadata/Cargo.toml
+++ b/built-in-services/metadata/Cargo.toml
@@ -15,10 +15,11 @@ serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 rlp = "0.4"
 bytes = "0.5"
-derive_more = "0.15"
+derive_more = "0.99"
 byteorder = "1.3"
 
 [dev-dependencies]
+hex = "0.4"
 cita_trie = "2.0"
 async-trait = "0.1"
 framework = { path = "../../framework" }
