--- a/core/network/Cargo.toml
+++ b/core/network/Cargo.toml
@@ -27,9 +27,10 @@ serde_derive = "1.0"
 snap = "0.2"
 tentacle = { git = "https://github.com/zeroqn/p2p", branch = "v0.3.0.alpha5-muta", features = [ "molc" ]}
 tentacle-ping = { git = "https://github.com/zeroqn/p2p", branch = "v0.3.0.alpha5-muta", features = [ "molc" ]}
-tentacle-discovery = { git = "https://github.com/zeroqn/p2p", branch = "v0.3.0.alpha5-muta", features = [ "molc" ]}
 tentacle-identify = { git = "https://github.com/zeroqn/p2p", branch = "v0.3.0.alpha5-muta", features = [ "molc" ]}
 tokio = { version = "0.2", features = ["macros", "rt-core"]}
+tokio-util = { version = "0.2", features = ["codec"] }
+molecule = "0.6"
 hostname = "0.3"
 lazy_static = "1.4"
 bs58 = "0.3"
