--- a/core/network/Cargo.toml
+++ b/core/network/Cargo.toml
@@ -25,7 +25,7 @@ rand = "0.7"
 serde = "1.0"
 serde_derive = "1.0"
 snap = "0.2"
-tentacle = { git = "https://github.com/zeroqn/p2p", branch = "v0.3.0.alpha5-muta", features = [ "molc" ]}
+tentacle = { version = "0.3.0-alpha.5", features = ["molc"]}
 tokio = { version = "0.2", features = ["macros", "rt-core"]}
 tokio-util = { version = "0.2", features = ["codec"] }
 molecule = "0.6"
